# python-collab-template

./: .flake8  .gitignore  Dockerfile  Makefile  poetry.md  pylintrc  pyproject.toml  requirements.dev  requirements.prod  setup.py
.github/workflows/: tests.yml
src/: cli.py
tests/: test_cli.py
utils/: py_ver.py  venv-pip-requirements-check.py
